--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
         "laravel/breeze": "^1.8",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
+        "laravel/telescope": "^4.7",
         "laravel/tinker": "^2.7",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
