--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #TELESCOPE
 TELESCOPE_ENABLED=false
+
+#SPOTIFY
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+
